# phd-lecture-dec

./: .gitignore  DATABASE_README.md  README.md  _quarto.yml  download_ict.bash  download_usitc_annual_reports.bash  get_data.py  index.qmd  jones.R  pyproject.toml  secrets-example.csv  setup.R  student-email-nov-2025.txt
assets/: custom.scss  jae.csl  phd-lecture-excalidraw.excalidraw  references.bib  website_caspar.css
data-prep/: 1987_sic_to_1997_naics.xls
data-prep/Scripts/: README.md  etable-setup.R  get_data.py  industry_match_chat.py  jones.R  load_libraries.R  map_prompt.txt  naics_sic_xwalk_DL.R  phd-lecture-analyses.R  reduce_prompt.txt  report_to_docling.py  select_cases.R
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/lecture-materials/ai-summaries/: Jones-EarningsManagementImport-1991_summary.html
lecture-materials/ai-summaries/: Jones-EarningsManagementImport-1991_summary.qmd
lecture-materials/handouts/: institutional-background.qmd
lecture-materials/playground/: revisiting-jones.qmd  website-data.qmd
lecture-materials/slides/: lecture-slides.qmd
paper_summaries/Company Websites A New Measure of Disclosure/: Company Websites A New Measure of Disclosure_summary.qmd
paper_summaries/Earnings Management During Antidumping Investigations in Europe /: Earnings Management During Antidumping Investigations in Europe _summary.qmd
paper_summaries/Jones-EarningsManagementImport-1991/: Jones-EarningsManagementImport-1991_summary.qmd
paper_summaries/The_Internet_Never_Forgets/: The_Internet_Never_Forgets_summary.qmd
(+8 files in other folders)
