[project]
name = "phd-lecture-dec"
version = "0.1.0"
description = "A repo for my idea of a PhD-lecture"
authors = [
    {name = "CasparDP",email = "peter@rsm.nl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "docling (>=2.55.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
