[project]
name = "phd-lecture-dec"
version = "0.1.0"
description = "A repo for my idea of a PhD-lecture"
authors = [
    {name = "CasparDP",email = "peter@rsm.nl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "docling>=2.55.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "pydantic>=2.12.2,<3.0.0",
    "openai (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "duckdb (>=1.4.2,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pymupdf (>=1.24.0,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
